The message panel in the comments needs to be a bit slimmer to avoid forcing a horizontal scrollbar.

--- a/pages/css/shop.css
+++ b/pages/css/shop.css
@@ -204,3 +204,7 @@
   font-size: 18px;
   font-weight: bold;
 }
+
+.listingDetailPanel .messagePanel .Scroller {
+  width: 555px;
+}
